--- a/DnD_Dataset_Engineering.ipynb
+++ b/DnD_Dataset_Engineering.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1mS8-Ddi19cWTQBFOyaXRRHx6zJT5LmZd",
-      "authorship_tag": "ABX9TyMB35wm7AEA9Tf1OQGi5czQ",
+      "authorship_tag": "ABX9TyPHKG3oVKm5dXkkC0OvDv5X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "GRaC-zagdQGq"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
         "idf_file_path = '/content/drive/MyDrive/Colab Notebooks/DnD/idf_dataset.csv'\n",
         "\n",
         "# Export DataFrame to Excel\n",
-        "#df.to_excel(df_file_path, index=False)\n",
+        "df.to_excel(df_file_path, index=False)\n",
         "\n",
         "# Export the idf dataset to a CSV file\n",
         "#idf.to_csv('/content/drive/MyDrive/Colab Notebooks/DnD/idf_dataset.csv', index=False)\n",
@@ -71,9 +71,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f9oTk0_21QW2",
-        "outputId": "e85a1ea9-8b4e-4a5c-9b9a-bcf0e580b17b"
+        "outputId": "7fb59f67-347b-4871-c546-2b61d97a9ce7"
       },
-      "execution_count": 135,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,8 +96,64 @@
       "metadata": {
         "id": "lG23fVQLs4JY"
       },
-      "execution_count": 123,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7cpMqvCW3ggV",
+        "outputId": "46c9dd1d-4835-4de4-b0df-ae498c8195f6"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 648 entries, 0 to 647\n",
+            "Data columns (total 27 columns):\n",
+            " #   Column                      Non-Null Count  Dtype  \n",
+            "---  ------                      --------------  -----  \n",
+            " 0   settlement                  648 non-null    object \n",
+            " 1   region_kingdom              648 non-null    object \n",
+            " 2   capital                     648 non-null    object \n",
+            " 3   settlement_population       648 non-null    int64  \n",
+            " 4   settlement_economy          648 non-null    int64  \n",
+            " 5   rumored_treasure_value      648 non-null    int64  \n",
+            " 6   demographic_breakdown       648 non-null    object \n",
+            " 7   average_age                 648 non-null    int64  \n",
+            " 8   most_likely_cause_of_death  648 non-null    object \n",
+            " 9   government_type             648 non-null    object \n",
+            " 10  class_density               648 non-null    object \n",
+            " 11  tax_rate                    648 non-null    int64  \n",
+            " 12  exports                     647 non-null    object \n",
+            " 13  imports                     623 non-null    object \n",
+            " 14  ruler                       536 non-null    object \n",
+            " 15  military                    622 non-null    object \n",
+            " 16  magic_academy               648 non-null    object \n",
+            " 17  languages                   646 non-null    object \n",
+            " 18  religions                   645 non-null    object \n",
+            " 19  region_population           648 non-null    int64  \n",
+            " 20  region_economy              648 non-null    int64  \n",
+            " 21  area                        365 non-null    float64\n",
+            " 22  average_temperature         648 non-null    float64\n",
+            " 23  annual_rainfall             648 non-null    float64\n",
+            " 24  sources                     538 non-null    object \n",
+            " 25  magical_climate             648 non-null    int64  \n",
+            " 26  dragon_sightings            648 non-null    int64  \n",
+            "dtypes: float64(3), int64(9), object(15)\n",
+            "memory usage: 136.8+ KB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -119,9 +175,9 @@
           "height": 776
         },
         "id": "lQLufd0ODKIs",
-        "outputId": "5f3fda8a-c477-4fd9-d782-197eb1db90d6"
+        "outputId": "abe1c710-49c4-4802-f0b7-11e36fea8c25"
       },
-      "execution_count": 136,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,19 +204,19 @@
               "3  {'humans': 487, 'halflings': 222, 'half-orcs':...           49   \n",
               "4  {'humans': 5842, 'halflings': 17158, 'half-orc...           58   \n",
               "\n",
-              "  most_likely_cause_of_death government_type  ...           languages  \\\n",
-              "0     Work-related accidents     Confederacy  ...  Chondathan, Common   \n",
-              "1             Bandit attacks      Matriarchy  ...  Chondathan, Common   \n",
-              "2              Assassination      Patriarchy  ...  Chondathan, Common   \n",
-              "3                     Poison        Monarchy  ...  Chondathan, Common   \n",
-              "4                 Starvation     Kleptocracy  ...  Chondathan, Common   \n",
+              "  most_likely_cause_of_death government_type  ...             languages  \\\n",
+              "0     Work-related accidents   [Confederacy]  ...  [Chondathan, Common]   \n",
+              "1             Bandit attacks    [Matriarchy]  ...  [Chondathan, Common]   \n",
+              "2              Assassination    [Patriarchy]  ...  [Chondathan, Common]   \n",
+              "3                     Poison      [Monarchy]  ...  [Chondathan, Common]   \n",
+              "4                 Starvation   [Kleptocracy]  ...  [Chondathan, Common]   \n",
               "\n",
-              "                                      religions region_population  \\\n",
-              "0  Bane, Chauntea, Cyric, Selûne, Sune, Waukeen           2920094   \n",
-              "1  Bane, Chauntea, Cyric, Selûne, Sune, Waukeen           2920094   \n",
-              "2  Bane, Chauntea, Cyric, Selûne, Sune, Waukeen           2920094   \n",
-              "3  Bane, Chauntea, Cyric, Selûne, Sune, Waukeen           2920094   \n",
-              "4  Bane, Chauntea, Cyric, Selûne, Sune, Waukeen           2920094   \n",
+              "                                        religions region_population  \\\n",
+              "0  [Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]           2920094   \n",
+              "1  [Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]           2920094   \n",
+              "2  [Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]           2920094   \n",
+              "3  [Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]           2920094   \n",
+              "4  [Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]           2920094   \n",
               "\n",
               "  region_economy area average_temperature annual_rainfall  \\\n",
               "0         403450  NaN                58.0            36.6   \n",
@@ -187,7 +243,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-989746e9-69ff-44d7-8801-b8bdccfa1092\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-aa2c1140-b8fb-4f99-b22a-abce283ce206\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -241,10 +297,10 @@
               "      <td>{'humans': 116046, 'halflings': 116, 'half-orc...</td>\n",
               "      <td>39</td>\n",
               "      <td>Work-related accidents</td>\n",
-              "      <td>Confederacy</td>\n",
+              "      <td>[Confederacy]</td>\n",
               "      <td>...</td>\n",
-              "      <td>Chondathan, Common</td>\n",
-              "      <td>Bane, Chauntea, Cyric, Selûne, Sune, Waukeen</td>\n",
+              "      <td>[Chondathan, Common]</td>\n",
+              "      <td>[Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]</td>\n",
               "      <td>2920094</td>\n",
               "      <td>403450</td>\n",
               "      <td>NaN</td>\n",
@@ -265,10 +321,10 @@
               "      <td>{'humans': 2335, 'halflings': 4699, 'half-orcs...</td>\n",
               "      <td>55</td>\n",
               "      <td>Bandit attacks</td>\n",
-              "      <td>Matriarchy</td>\n",
+              "      <td>[Matriarchy]</td>\n",
               "      <td>...</td>\n",
-              "      <td>Chondathan, Common</td>\n",
-              "      <td>Bane, Chauntea, Cyric, Selûne, Sune, Waukeen</td>\n",
+              "      <td>[Chondathan, Common]</td>\n",
+              "      <td>[Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]</td>\n",
               "      <td>2920094</td>\n",
               "      <td>403450</td>\n",
               "      <td>NaN</td>\n",
@@ -289,10 +345,10 @@
               "      <td>{'humans': 580, 'halflings': 55, 'half-orcs': ...</td>\n",
               "      <td>43</td>\n",
               "      <td>Assassination</td>\n",
-              "      <td>Patriarchy</td>\n",
+              "      <td>[Patriarchy]</td>\n",
               "      <td>...</td>\n",
-              "      <td>Chondathan, Common</td>\n",
-              "      <td>Bane, Chauntea, Cyric, Selûne, Sune, Waukeen</td>\n",
+              "      <td>[Chondathan, Common]</td>\n",
+              "      <td>[Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]</td>\n",
               "      <td>2920094</td>\n",
               "      <td>403450</td>\n",
               "      <td>NaN</td>\n",
@@ -313,10 +369,10 @@
               "      <td>{'humans': 487, 'halflings': 222, 'half-orcs':...</td>\n",
               "      <td>49</td>\n",
               "      <td>Poison</td>\n",
-              "      <td>Monarchy</td>\n",
+              "      <td>[Monarchy]</td>\n",
               "      <td>...</td>\n",
-              "      <td>Chondathan, Common</td>\n",
-              "      <td>Bane, Chauntea, Cyric, Selûne, Sune, Waukeen</td>\n",
+              "      <td>[Chondathan, Common]</td>\n",
+              "      <td>[Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]</td>\n",
               "      <td>2920094</td>\n",
               "      <td>403450</td>\n",
               "      <td>NaN</td>\n",
@@ -337,10 +393,10 @@
               "      <td>{'humans': 5842, 'halflings': 17158, 'half-orc...</td>\n",
               "      <td>58</td>\n",
               "      <td>Starvation</td>\n",
-              "      <td>Kleptocracy</td>\n",
+              "      <td>[Kleptocracy]</td>\n",
               "      <td>...</td>\n",
-              "      <td>Chondathan, Common</td>\n",
-              "      <td>Bane, Chauntea, Cyric, Selûne, Sune, Waukeen</td>\n",
+              "      <td>[Chondathan, Common]</td>\n",
+              "      <td>[Bane, Chauntea, Cyric, Selûne, Sune, Waukeen]</td>\n",
               "      <td>2920094</td>\n",
               "      <td>403450</td>\n",
               "      <td>NaN</td>\n",
@@ -357,7 +413,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-989746e9-69ff-44d7-8801-b8bdccfa1092')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa2c1140-b8fb-4f99-b22a-abce283ce206')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -409,12 +465,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-989746e9-69ff-44d7-8801-b8bdccfa1092 button.colab-df-convert');\n",
+              "        document.querySelector('#df-aa2c1140-b8fb-4f99-b22a-abce283ce206 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-989746e9-69ff-44d7-8801-b8bdccfa1092');\n",
+              "        const element = document.querySelector('#df-aa2c1140-b8fb-4f99-b22a-abce283ce206');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -434,8 +490,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-78cf0e9d-4130-4502-9807-0ac296b460e8\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-78cf0e9d-4130-4502-9807-0ac296b460e8')\"\n",
+              "<div id=\"df-4a4c7787-0df9-481b-92a1-4f53eea8b2da\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4a4c7787-0df9-481b-92a1-4f53eea8b2da')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -554,7 +610,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-78cf0e9d-4130-4502-9807-0ac296b460e8 button');\n",
+              "        document.querySelector('#df-4a4c7787-0df9-481b-92a1-4f53eea8b2da button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -565,7 +621,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 136
+          "execution_count": 14
         }
       ]
     },
@@ -1887,7 +1943,7 @@
         "id": "IVVu-gA_WZKv",
         "outputId": "cf40c2fa-17c5-49cf-d08a-f06c58108b3f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2800,7 +2856,7 @@
         "id": "UqqXdKHorafi",
         "outputId": "4bf506d9-d942-49f6-c368-97a893ae4289"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2843,7 +2899,7 @@
         "id": "qH3FhmFH-UgV",
         "outputId": "f346b39e-8f1d-4aa7-f0db-ee71844f1c3d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3026,7 +3082,7 @@
         "id": "GpTYWA60RDgq",
         "outputId": "4e6b9364-226f-4037-afdb-b34a7c9fff63"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3728,7 +3784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3824,7 +3880,7 @@
       "metadata": {
         "id": "Mu5eRvdhbQe-"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3839,7 +3895,7 @@
         "id": "OUqTmfL7hpUc",
         "outputId": "f72fb29a-b90a-4c1a-c0a6-368d2b6e7aba"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3873,7 +3929,7 @@
         "id": "I2vicXa3kGZU",
         "outputId": "f6d92df2-be1b-460f-b5ed-d44576fc61b9"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3912,7 +3968,7 @@
       "metadata": {
         "id": "T2lF-orzncir"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3927,7 +3983,7 @@
         "id": "OBY0gFeOnjcO",
         "outputId": "d5eef366-df77-4c8e-e417-61fadaba0002"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3973,7 +4029,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import ast\n",
+        "import numpy as np\n",
+        "\n",
+        "# Function to safely evaluate literals or return an empty dictionary on error\n",
+        "def safe_literal_eval(text):\n",
+        "    try:\n",
+        "        return ast.literal_eval(text)\n",
+        "    except (ValueError, SyntaxError):\n",
+        "        return {}\n",
+        "\n",
+        "# Convert 'demographic_breakdown' column to dictionaries, replacing problematic entries with empty dictionaries\n",
+        "df['demographic_breakdown'] = df['demographic_breakdown'].apply(lambda x: safe_literal_eval(x) if pd.notna(x) else {})\n",
+        "\n",
+        "# Convert 'class_density' column to dictionaries\n",
+        "df['class_density'] = df['class_density'].apply(safe_literal_eval)\n",
+        "\n",
+        "# Convert 'government_type' to a list and replace the original column\n",
+        "df['government_type'] = df['government_type'].apply(lambda x: [x])\n",
+        "\n",
+        "# Split 'religions' by commas and replace the original column\n",
+        "df['religions'] = df['religions'].str.split(', ')\n",
+        "\n",
+        "# Split 'languages' by commas and replace the original column\n",
+        "df['languages'] = df['languages'].str.split(', ')\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3981,7 +4062,7 @@
         "id": "TEZeOApipk_O",
         "outputId": "96568bb6-5170-4d26-90d7-2d57e6f810c5"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
