--- a/Dataset_Collection.ipynb
+++ b/Dataset_Collection.ipynb
@@ -27,11 +27,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "73bliwpoih3X"
+        "id": "73bliwpoih3X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa1f2aa5-b682-4c66-f12e-f545a02e30b7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -6036,9 +6048,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bZk1-JKlBeZ9",
-        "outputId": "66969655-9e58-4a07-a595-c15a81be4efc"
+        "outputId": "7a23515e-a42b-4bc0-9145-c3119ed08a9b"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -6109,9 +6121,92 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Define the file path (it seems you've already specified it)\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/DnD/updated_dataset_original.csv'"
+      ],
       "metadata": {
         "id": "9k0KwGMJeo3d"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    df = pd.read_csv(file_path, encoding='ISO-8859-1')\n",
+        "except UnicodeDecodeError:\n",
+        "    # If 'ISO-8859-1' does not work, try 'cp1252'\n",
+        "    df = pd.read_csv(file_path, encoding='cp1252')"
+      ],
+      "metadata": {
+        "id": "DP9d1Mu9EomO"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JRViSauuE1WQ",
+        "outputId": "dcaf2fa1-4e17-45b5-d78f-b9dfb95ed76c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 849 entries, 0 to 848\n",
+            "Data columns (total 27 columns):\n",
+            " #   Column                      Non-Null Count  Dtype  \n",
+            "---  ------                      --------------  -----  \n",
+            " 0   settlement                  849 non-null    object \n",
+            " 1   region                      849 non-null    object \n",
+            " 2   area                        833 non-null    float64\n",
+            " 3   size                        847 non-null    object \n",
+            " 4   capital                     607 non-null    object \n",
+            " 5   settlement_population       375 non-null    object \n",
+            " 6   settlement_economy          367 non-null    float64\n",
+            " 7   rumored_treasure_value      367 non-null    float64\n",
+            " 8   demographic_breakdown       368 non-null    object \n",
+            " 9   average_age                 367 non-null    float64\n",
+            " 10  most_likely_cause_of_death  367 non-null    object \n",
+            " 11  government_type             371 non-null    object \n",
+            " 12  class_density               367 non-null    object \n",
+            " 13  tax_rate                    367 non-null    float64\n",
+            " 14  exports                     453 non-null    object \n",
+            " 15  imports                     435 non-null    object \n",
+            " 16  military                    441 non-null    object \n",
+            " 17  magic_academy               365 non-null    object \n",
+            " 18  languages                   440 non-null    object \n",
+            " 19  religions                   431 non-null    object \n",
+            " 20  region_population           687 non-null    object \n",
+            " 21  region_economy              368 non-null    float64\n",
+            " 22  area.1                      162 non-null    float64\n",
+            " 23  average_temperature         367 non-null    float64\n",
+            " 24  annual_rainfall             367 non-null    float64\n",
+            " 25  magical_climate             367 non-null    float64\n",
+            " 26  dragon_sightings            367 non-null    float64\n",
+            "dtypes: float64(11), object(16)\n",
+            "memory usage: 179.2+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BGGNBf8XFf-b"
       },
       "execution_count": null,
       "outputs": []
