--- a/Dataset_Collection.ipynb
+++ b/Dataset_Collection.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "73bliwpoih3X",
         "colab": {
@@ -6051,7 +6051,7 @@
         "id": "bZk1-JKlBeZ9",
         "outputId": "7a23515e-a42b-4bc0-9145-c3119ed08a9b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6129,7 +6129,7 @@
       "metadata": {
         "id": "9k0KwGMJeo3d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6144,7 +6144,19 @@
       "metadata": {
         "id": "DP9d1Mu9EomO"
       },
-      "execution_count": 39,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "userdata.get('secretName')"
+      ],
+      "metadata": {
+        "id": "5TsTcWB3pD6j"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6159,7 +6171,7 @@
         "id": "JRViSauuE1WQ",
         "outputId": "7385e476-9db4-4e46-a54c-927ae59fe0e6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6240,7 +6252,7 @@
         "id": "BGGNBf8XFf-b",
         "outputId": "d81db007-5b5e-4175-b35d-8125f385e969"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6267,7 +6279,7 @@
       "metadata": {
         "id": "8LUsAaUdPNks"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6279,7 +6291,7 @@
       "metadata": {
         "id": "rLPSk2oZeHLs"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6295,7 +6307,7 @@
         "id": "M5-ehOBhy4Gc",
         "outputId": "870d3880-8713-48f8-d0a8-c1342b87bf81"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6749,7 +6761,7 @@
       "metadata": {
         "id": "6w-KWx5e0-au"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6764,7 +6776,7 @@
         "id": "i3-s8zn71kw_",
         "outputId": "54dce715-cb9f-46b7-e716-c2a143146e77"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6785,7 +6797,120 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Data for Anauroch\n",
+        "anauroch_races = ['Bedine', 'Zhentarim', 'Shadovar', 'shades', 'krinth']\n",
+        "anauroch_languages = ['Midani', 'Chondathan', 'Damaran', 'Draconic', 'Gnoll', 'Netherese', 'Orc']\n",
+        "anauroch_religions = ['Beshaba', 'Kelemvor', 'Selune', 'Talos']\n",
+        "anauroch_imports = ['Livestock', 'wooden goods']\n",
+        "anauroch_exports = ['Dates', 'salt', 'spices']\n",
+        "\n",
+        "# Data for Calimshan\n",
+        "calimshan_races_percentages = {'humans': 91, 'genasi': 3, 'half-Orcs': 3}\n",
+        "calimshan_languages = ['Alzhedo', 'Chondathan', 'Chultan', 'Shaaran', 'Tashalan', 'Draconic', 'Elemental']\n",
+        "calimshan_religions = ['Azuth', 'Ibrandul', 'Ilmater', 'Shar', 'Sharess', 'Talos', 'Tyr']\n",
+        "calimshan_imports = ['Food', 'slaves', 'wizards']\n",
+        "calimshan_exports = ['Armor', 'books', 'gems', 'jewelry', 'leather_goods', 'mercenaries', 'minor_magic_items']\n",
+        "\n",
+        "# Data for Cormanthyr\n",
+        "cormanthyr_races_percentages = {'elves': 60, 'half-elves': 20, 'humans': 10, 'halflings': 8, 'Drow': 2}\n",
+        "cormanthyr_language_main = 'Espruar'\n",
+        "cormanthyr_religions = ['Corellon Larethian', 'Eilistraee', 'Mielikki', 'Mystra', 'Silvanus', 'Vhaeraun']\n",
+        "cormanthyr_imports = []\n",
+        "cormanthyr_exports = []\n",
+        "\n",
+        "# Data for Dalelands\n",
+        "dalelands_races_percentages = {'humans': 70, 'half-elves': 20, 'elves': 9}\n",
+        "dalelands_language_main = 'Chondathan'\n",
+        "dalelands_religions = ['Chauntea', 'Ilmater', 'Lathander', 'Mielikki', 'Silvanus', 'Tempus', 'Torm', 'Tyr']\n",
+        "dalelands_imports = ['Armor', 'books', 'glass', 'jewelry', 'metalwork', 'paper', 'textiles', 'weapons']\n",
+        "dalelands_exports = ['Ale', 'bread', 'cheese', 'fruit', 'grain', 'hides', 'timber', 'vegetables']\n",
+        "\n",
+        "# Data for Dambrath\n",
+        "dambrath_races_percentages = {'half-drow (Crinti)': 15, 'humans (Shebali)': 70, 'others': 15}\n",
+        "dambrath_languages = ['Dambrathan', 'Elven']\n",
+        "dambrath_religions = ['Loviatar', 'Tempus', 'Lloth']\n",
+        "dambrath_exports = ['Horses', 'silver', 'pearls', 'wood items', 'fruit', 'fish']\n",
+        "\n",
+        "# Data for Erlkazar\n",
+        "erlkazar_races_percentages = {'humans': 100}\n",
+        "erlkazar_language_main = 'Not specified'\n",
+        "erlkazar_religions = ['Not specified']\n",
+        "erlkazar_imports = ['Not specified']\n",
+        "erlkazar_exports = ['Not specified']\n",
+        "\n",
+        "# Data for Evereska\n",
+        "evereska_races_percentages = {'elves': 100}\n",
+        "evereska_language_main = 'Elvish'\n",
+        "evereska_religions = ['Not specified']\n",
+        "evereska_imports = ['Psionic items']\n",
+        "evereska_exports = ['Not specified']\n",
+        "\n",
+        "# Data for Hartsvale\n",
+        "hartsvale_races_percentages = {'humans': 100}\n",
+        "hartsvale_language_main = 'Not specified'\n",
+        "hartsvale_religions = ['Not specified']\n",
+        "hartsvale_imports = ['Not specified']\n",
+        "hartsvale_exports = ['Not specified']\n",
+        "\n",
+        "# Data for Chult\n",
+        "chult_races_percentages = {'humans': 90, 'other': 10}\n",
+        "chult_language_main = 'Chultan'\n",
+        "chult_religions = ['Ubtao']\n",
+        "chult_imports = ['Not specified']\n",
+        "chult_exports = ['Not specified']\n",
+        "\n",
+        "# Data for Murghôm\n",
+        "murghom_races_percentages = {'humans': 80, '0ther': 20}\n",
+        "murghom_language_main = 'Muhjuri'\n",
+        "murghom_religions = ['Mulhorandi pantheon']\n",
+        "murghom_imports = ['Grains', 'Textiles']\n",
+        "murghom_exports = ['Artifacts', 'Rare metals']\n",
+        "\n",
+        "# Data for Okoth\n",
+        "okoth_races_percentages = {'Sarrukh': 70, 'yuan-ti': 20, 'other': 10}\n",
+        "okoth_language_main = 'Sarrukhi'\n",
+        "okoth_religions = ['Worship of the World Serpent']\n",
+        "okoth_imports = ['Magic', 'weapons']\n",
+        "okoth_exports = ['Elemental knowledge', 'Magical items']\n",
+        "\n",
+        "# Data for Nelanther Isles\n",
+        "nelanther_isles_races_percentages = {\n",
+        "    'orcs': 30, 'humans': 20, 'half-Orcs': 15, 'lizardfolk': 15, 'ogres': 10, 'humanoids': 9, 'other': 1\n",
+        "}\n",
+        "nelanther_isles_language_main = 'Lantanese'\n",
+        "nelanther_isles_religions = ['Umberlee worship']\n",
+        "nelanther_isles_imports = ['Freshwater', 'Supplies for sea voyages']\n",
+        "nelanther_isles_exports = ['Slaves', 'stolen and salvaged goods']\n",
+        "\n",
+        "# Data for Rashemen\n",
+        "rashemen_races_percentages = {'humans': 90, 'other': 10}\n",
+        "rashemen_language_main = 'Rashemi'\n",
+        "rashemen_religions = ['Bhalla', 'Khelliara', 'The Hidden One']\n",
+        "rashemen_imports = ['Cloth', 'food', 'wood products']\n",
+        "rashemen_exports = ['Carvings', 'cheese', 'firewine', 'furs', 'wool']\n",
+        "\n",
+        "# Data for Samarach\n",
+        "samarach_races_percentages = {'humans': 99, 'yaun-ti': 1}\n",
+        "samarach_language_main = 'Tashalan'\n",
+        "samarach_religions = ['Not specified']\n",
+        "samarach_imports = ['Weapons']\n",
+        "samarach_exports = ['pearls', 'salt', 'spices']\n",
+        "\n",
+        "# Data for Sespech\n",
+        "sespech_races_percentages = {'humans': 96, 'dwarves': 2, 'elves': 1, 'other': 1}\n",
+        "sespech_language_main = 'Not specified'\n",
+        "sespech_religions = ['Not specified']\n",
+        "sespech_imports = ['Timber', 'Goods for trade', 'Metal']\n",
+        "sespech_exports = ['Horses', 'mercenaries', 'salt']\n",
+        "\n",
+        "# Data for Vaasa\n",
+        "sespech_races_percentages = {'humans': 60, 'dwarves': 30, 'orcs': 9, 'other': 1}\n",
+        "sespech_language_main = 'Not specified'\n",
+        "sespech_religions = ['Not specified']\n",
+        "sespech_imports = ['Food', 'Weapons']\n",
+        "sespech_exports = ['Copper', 'iron', 'silver', 'gems', 'furs']\n"
+      ],
       "metadata": {
         "id": "YllOkWMi1sQf"
       },
